<resources>
    <string name="app_name">管线安全助手(超管版)</string>
    <string name="title_message">消息</string>
    <string name="message_mission">巡线计划</string>
    <string name="title_manage">管理</string>
    <string name="new_message">新消息</string>
    <string name="title_myself">我</string>
    <string name="myself_sign_out">退出登录</string>
    <string name="no_data">没有找到数据</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="dialog_open">打开</string>
    <string name="dialog_close">关闭</string>
    <string name="title_map_pipe_list">管线列表</string>
    <string name="title_plan_list">巡线计划</string>
    <string name="plan_list_publish">发布计划</string>
    <string name="plan_list_uncompleted">未完成</string>
    <string name="plan_list_completed">已完成</string>
    <string name="plan_list_timeout">超时</string>
    <string name="plan_list_excess">超额</string>
    <string name="plan_list_all">全部</string>
    <string name="plan_list_item_to_detail">详情 ></string>
    <string name="plan_list_item_total">巡线次数</string>
    <string name="plan_list_item_num">完成</string>
    <string name="plan_list_item_completed_time">完成时间</string>
    <string name="plan_list_item_person_liable">责任人</string>
    <string name="plan_list_item_site">站点</string>
    <string name="title_plan_publish_plan">发布计划</string>
    <string name="title_plan_publish">发布</string>
    <string name="plan_publish_next_step">下一步</string>
    <string name="plan_publish_first">1</string>
    <string name="plan_publish_second">2</string>
    <string name="plan_publish_third">3</string>
    <string name="plan_publish_first_contacts">/3 请选择任务责任人</string>
    <string name="plan_publish_second_info">/3 请填写任务信息</string>
    <string name="plan_publish_third_site">/3 请选择站点</string>
    <string name="plan_publish_third_past_site">请选择一个历史站点</string>
    <string name="plan_publish_second_title">请输入计划标题</string>
    <string name="plan_publish_second_please_deadline">请选择任务截止时间</string>
    <string name="plan_publish_second_deadline">选择截止日期</string>
    <string name="plan_publish_second_or">或 选择常用周期</string>
    <string name="plan_publish_second_one_month">1个月</string>
    <string name="plan_publish_second_one_quarter">1季度</string>
    <string name="plan_publish_second_one_year">一年</string>
    <string name="plan_publish_second_num">巡线次数</string>
    <string name="plan_publish_second_please_num">请输入数字</string>
    <string name="plan_publish_range">打卡范围(m)</string>
    <string name="plan_publish_range_please">请输入打卡范围</string>
    <string name="title_plan_task">巡线任务</string>
    <string name="plan_task_add">新增任务</string>
    <string name="title_plan_task_item_site">站点</string>
    <string name="title_plan_task_item_time">时间</string>
    <string name="title_plan_task_item_person">巡线人</string>
    <string name="title_plan_task_item_status">进度</string>
    <string name="title_plan_sign_in">签到</string>
    <string name="plan_sign_in_in_area">可打卡范围，打卡站点为 </string>
    <string name="plan_sign_in_out_area">网络较差或当前位置不在可打卡范围</string>
    <string name="plan_sign_in_circle_text">打卡</string>
    <string name="plan_sign_in_write_location">记录当前位置\n网络恢复后补打卡</string>
    <string name="title_map">地图</string>
    <string name="map_to_here">导航去这里</string>
    <string name="title_incident">事件</string>
    <string name="incident_list_digitizer_online">数字化仪上线</string>
    <string name="incident_list_digitizer_offline">数字化仪下线</string>
    <string name="incident_list_digitizer_time_off">数字化仪时间不同步</string>
    <string name="incident_list_sensor_offline">传感器不在线</string>
    <string name="incident_list_isolator_offline">隔离器不在线</string>
    <string name="incident_list_unknown">查无数据</string>
    <string name="incident_list_all">全部</string>
    <string name="title_incident_detail">事件详情</string>
    <string name="incident_detail_to_site">转到站点</string>
    <string name="incident_detail_to_pipe">转到管线</string>
    <string name="title_news">新闻</string>
    <string name="news_release">发布</string>
    <string name="title_news_details">新闻详情</string>
    <string name="news_list_noLink">没有新闻连接</string>
    <string name="title_news_add">添加新闻</string>
    <string name="news_add_input_title">请输入新闻标题</string>
    <string name="news_add_input_describe">请输入新闻描述（20个字以内）</string>
    <string name="news_add_input_link">请输入新闻链接，网址请以http或https开头</string>
    <string name="news_add_select_type">请选择新闻类别</string>
    <string name="news_add_type_company">公司</string>
    <string name="news_add_type_industry">行业</string>
    <string name="news_add_type_all">全部</string>
    <string name="news_add_type_default">默认</string>
    <string name="news_add_img_upload">上传图片</string>
    <string name="news_add_confirm_upload">确认添加</string>
    <string name="title_alarm">警报</string>
    <string name="alarm_list_all">全部</string>
    <string name="alarm_list_unlift">未解除</string>
    <string name="title_alarm_analysis">警报分析</string>
    <string name="alarm_analysis_add_title">添加标题</string>
    <string name="alarm_analysis_input_title">请输入标题内容(1-13个字符)</string>
    <string name="alarm_analysis_reason">选择警报原因</string>
    <string name="alarm_analysis_upload_screenshot">上传管线截图</string>
    <string name="alarm_analysis_content">警报内容</string>
    <string name="alarm_analysis_wait_confirm">待确定</string>
    <string name="alarm_analysis_test">测试</string>
    <string name="alarm_analysis_normal">正常</string>
    <string name="alarm_analysis_misinformation">误报</string>
    <string name="alarm_analysis_device_fault">设备故障</string>
    <string name="alarm_analysis_net_fault">网络故障</string>
    <string name="alarm_analysis_all">全部</string>
    <string name="alarm_analysis_add_abstract">添加摘要</string>
    <string name="alarm_analysis_input_abstract">请输入摘要内容</string>
    <string name="alarm_analysis_read_level">阅读等级</string>
    <string name="alarm_analysis_super_admin">超级管理员</string>
    <string name="alarm_analysis_admin">管理员</string>
    <string name="alarm_analysis_user">用户</string>
    <string name="alarm_analysis_upload">上传</string>
    <string name="alarm_analysis_upload_success">上传成功</string>
    <string name="alarm_analysis_upload_fail">上传失败</string>
    <string name="alarm_analysis_start_time">选择开始时间</string>
    <string name="alarm_analysis_end_time">选择结束时间</string>
    <string name="title_analysis_detail">警报分析详情</string>
    <string name="analysis_detail_time">时间</string>
    <string name="analysis_detail_id">报警ID</string>
    <string name="analysis_detail_info">报警信息</string>
    <string name="analysis_detail_reason">报警原因</string>
    <string name="analysis_detail_abstract">摘要</string>
    <string name="analysis_detail_people">分析人</string>
    <string name="analysis_detail_level">阅读等级</string>
    <string name="analysis_detail_read_num">阅读人</string>
    <string name="title_alarm_details">警报详情</string>
    <string name="alarm_to_map">转到地图</string>
    <string name="alarm_lift">解除警报</string>
    <string name="alarm_lift_success">解除成功</string>
    <string name="alarm_lift_fail">解除失败</string>
    <string name="belong_line">所在管线</string>
    <string name="build_alarm_analysis">生成警报分析</string>
    <string name="title_waveform">波形图</string>
    <string name="waveform_start_site">首站</string>
    <string name="waveform_end_site">末站</string>
    <string name="login_fingerprint">指纹登录</string>
    <string name="login_fingerprint_summary">开启后可使用指纹认证完成快速登录，设置仅对本机生效。如需修改指纹，请在系统设置中操作</string>
    <string name="dialog_close_fingerprint">确认关闭指纹登录</string>
    <string name="dialog_verify_fingerprint">请验证指纹</string>
    <string name="crash_notice">很抱歉，我有事儿，先走一步啦！</string>
    <string name="gesture_toast"></string>
    <string name="tv_ip">IP</string>
    <string name="tv_port">端口</string>
    <string name="toolbar_setting">设置</string>
    <string name="tv_count">账号</string>
    <string name="tv_password">密码</string>
    <string name="tv_login">登录</string>
    <string name="login_next">下一步</string>
    <string name="copyright">由百瑞云提供计算支持</string>
    <string name="back">返回</string>
    <string name="tv_site">站点</string>
    <string name="tv_num">数字化仪</string>
    <string name="tv_pipeline">管线</string>
    <string name="tv_pipeline_collection">管线集合</string>
    <string name="tv_statistics">统计</string>
    <string name="tv_disk">磁盘</string>
    <string name="tv_pipeline_blind_area">管线盲区</string>
    <string name="tv_pipeline_work_status">管线工况</string>
    <string name="tv_contacts">联系人</string>
    <string name="contacts_type_all">全部</string>
    <string name="title_auth_manager">授权管理</string>
    <string name="auth_offline_user">下线用户</string>
    <string name="auth_user">用户</string>
    <string name="auth_pipetap">阀门</string>
    <string name="title_pipe">管线</string>
    <string name="title_pipe_modify">编辑管线</string>
    <string name="pipe_modify_confirm_modify">确认修改</string>
    <string name="pipe_modify_confirm_delete">删除管线</string>
    <string name="title_pipe_add">新增管线</string>
    <string name="pipe_modify_confirm_add">确认新增</string>
    <string name="title_pipe_detail">管线详情</string>
    <string name="pipe_detail_id_i">请输入管线ID</string>
    <string name="pipe_detail_name_i">请输入管线名称</string>
    <string name="pipe_detail_sort_id_i">请输入排序ID</string>
    <string name="pipe_detail_belong_pc_i">请输入所属管线集合</string>
    <string name="pipe_detail_length_i">请输入管道长度</string>
    <string name="pipe_detail_material_i">请输入材质</string>
    <string name="pipe_detail_company_i">请输入所属公司</string>
    <string name="pipe_detail_start_site_i">请输入起始站点</string>
    <string name="pipe_detail_speed_i">请输入声速</string>
    <string name="pipe_detail_plugin_name">泄露插件</string>
    <string name="pc_detail_id">管线集合ID</string>
    <string name="pc_detail_name">管线集合名</string>
    <string name="pc_detail_sort_id">排序ID</string>
    <string name="pc_detail_manager">管理者</string>
    <string name="pc_detail_phone">手机</string>
    <string name="pc_detail_email">邮箱</string>
    <string name="pc_detail_remark">备注</string>
    <string name="hint_pc_id">请输入管线集合ID</string>
    <string name="hint_pc_name">请输入管线集合名</string>
    <string name="hint_pc_sort_id">请输入排序ID</string>
    <string name="hint_pc_manager">请输入管理者</string>
    <string name="hint_pc_phone">请输入手机</string>
    <string name="hint_pc_email">请输入邮箱</string>
    <string name="hint_pc_remark">请输入备注</string>
    <string name="pipe_collection_delete">删除管线集合</string>
    <string name="mulitple_selection">多选</string>
    <string name="tv_id">ID</string>
    <string name="along_company">所属公司</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="phone_num">联系方式</string>
    <string name="principal">负责人</string>
    <string name="line_whether">是否在线</string>
    <string name="double_snesor">双传感器</string>
    <string name="double_filter">双滤波</string>
    <string name="hint_site_id">请输入站点ID</string>
    <string name="hint_company">请输入公司名称</string>
    <string name="hint_longitude">请输入经度</string>
    <string name="hint_latitude">请输入纬度</string>
    <string name="hint_phone">请输入联系方式</string>
    <string name="hint_name">请输入姓名</string>
    <string name="submit_modify">确定修改</string>
    <string name="delete_site">删除站点</string>
    <string name="site_a">A</string>
    <string name="site_b">B</string>
    <string name="site_c">C</string>
    <string name="site_d">D</string>
    <string name="site_e">E</string>
    <string name="site_f">F</string>
    <string name="site_g">G</string>
    <string name="site_h">H</string>
    <string name="site_i">I</string>
    <string name="site_j">J</string>
    <string name="site_c_please">请输入C</string>
    <string name="site_d_please">请输入D</string>
    <string name="site_e_please">请输入E</string>
    <string name="site_f_please">请输入F</string>
    <string name="site_g_please">请输入G</string>
    <string name="site_h_please">请输入H</string>
    <string name="site_i_please">请输入I</string>
    <string name="site_j_please">请输入J</string>
    <string name="leak_setting">泄露参数设置</string>
</resources>