<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:order="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.barisetech.www.workmanage.base.BaseFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar"
            app:toolbar="@{fragment.observableToolbar}" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.barisetech.www.workmanage.widget.FormView
                    android:id="@+id/site_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    order:ddd_content_enable="true"
                    order:ddd_content_hint="@string/hint_site_id"
                    order:dddInputType="number"
                    order:ddd_is_bottom_line="true"
                    android:visibility="gone"
                    order:ddd_label="@string/tv_id" />

                <com.barisetech.www.workmanage.widget.FormView
                    android:id="@+id/site_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    order:ddd_content_enable="true"
                    order:ddd_content_hint="@string/hint_company"
                    order:ddd_is_bottom_line="true"
                    android:visibility="gone"
                    order:ddd_label="@string/along_company" />
                <com.barisetech.www.workmanage.widget.FormView
                    android:id="@+id/site_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    order:ddd_content_enable="true"
                    order:ddd_content_hint="@string/hint_longitude"
                    order:dddInputType="numberDecimal"
                    order:ddd_is_bottom_line="true"
                    order:ddd_label="@string/longitude" />
                <com.barisetech.www.workmanage.widget.FormView
                    android:id="@+id/site_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    order:ddd_content_enable="true"
                    order:ddd_content_hint="@string/hint_latitude"
                    order:dddInputType="numberDecimal"
                    order:ddd_is_bottom_line="true"
                    order:ddd_label="@string/latitude" />
                <com.barisetech.www.workmanage.widget.FormView
                    android:id="@+id/site_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    order:ddd_content_enable="true"
                    order:ddd_content_hint="@string/hint_phone"
                    order:dddInputType="phone"
                    order:ddd_is_bottom_line="true"
                    order:ddd_label="@string/phone_num" />

                <com.barisetech.www.workmanage.widget.FormView
                    android:id="@+id/site_principal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    order:ddd_content_enable="true"
                    order:ddd_content_hint="@string/hint_name"
                    order:ddd_is_bottom_line="true"
                    order:ddd_label="@string/principal" />

                <com.barisetech.www.workmanage.widget.FormView
                    android:id="@+id/site_line_whether"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    order:ddd_content_hint=""
                    order:ddd_is_bottom_line="true"
                    order:ddd_is_indicate="true"
                    android:visibility="gone"
                    order:ddd_label="@string/line_whether"/>

                <com.barisetech.www.workmanage.widget.FormView
                    android:id="@+id/site_double_sensor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    order:ddd_content_hint=""
                    order:ddd_is_bottom_line="true"
                    order:ddd_is_indicate="true"
                    order:ddd_label="@string/double_snesor"/>
                <com.barisetech.www.workmanage.widget.FormView
                    android:id="@+id/site_double_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    order:ddd_content_hint=""
                    order:ddd_is_bottom_line="true"
                    order:ddd_is_indicate="true"
                    order:ddd_label="@string/double_filter"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_28">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/dp_24"
                            android:gravity="center_vertical"
                            android:text="@string/pipe_detail_plugin_name"
                            android:textColor="#262626"
                            android:textSize="@dimen/dp_16" />

                        <org.angmarch.views.NiceSpinner
                            android:id="@+id/sp_select_plugin"
                            android:layout_alignParentRight="true"
                            android:layout_width="@dimen/dp_200"
                            android:layout_height="wrap_content"
                            app:dropDownListPaddingBottom="1dp"/>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pw_origin_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_title_top"
                        android:paddingBottom="@dimen/dp_8"
                        android:paddingLeft="@dimen/dp_15"
                        android:paddingTop="@dimen/dp_9"
                        android:text="@string/leak_setting"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14"/>

                    <com.barisetech.www.workmanage.widget.FormView
                        android:id="@+id/site_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        order:ddd_content_hint=""
                        order:ddd_is_bottom_line="true"
                        order:ddd_is_indicate="true"
                        order:ddd_label="@string/site_a"/>

                    <com.barisetech.www.workmanage.widget.FormView
                        android:id="@+id/site_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        order:ddd_content_hint=""
                        order:ddd_is_bottom_line="true"
                        order:ddd_is_indicate="true"
                        order:ddd_label="@string/site_b"/>

                    <com.barisetech.www.workmanage.widget.FormView
                        android:id="@+id/site_c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        order:ddd_content_enable="true"
                        order:ddd_content_hint="@string/site_c_please"
                        order:dddInputType="numberDecimal"
                        order:ddd_is_bottom_line="true"
                        order:ddd_label="@string/site_c" />

                    <com.barisetech.www.workmanage.widget.FormView
                        android:id="@+id/site_d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        order:ddd_content_enable="true"
                        order:ddd_content_hint="@string/site_d_please"
                        order:dddInputType="number"
                        order:ddd_is_bottom_line="true"
                        order:ddd_label="@string/site_d" />

                    <com.barisetech.www.workmanage.widget.FormView
                        android:id="@+id/site_e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        order:ddd_content_enable="true"
                        order:ddd_content_hint="@string/site_e_please"
                        order:dddInputType="numberDecimal"
                        order:ddd_is_bottom_line="true"
                        order:ddd_label="@string/site_e" />

                    <com.barisetech.www.workmanage.widget.FormView
                        android:id="@+id/site_f"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        order:ddd_content_enable="true"
                        order:ddd_content_hint="@string/site_f_please"
                        order:dddInputType="numberDecimal"
                        order:ddd_is_bottom_line="true"
                        order:ddd_label="@string/site_f" />

                    <com.barisetech.www.workmanage.widget.FormView
                        android:id="@+id/site_g"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        order:ddd_content_enable="true"
                        order:ddd_content_hint="@string/site_g_please"
                        order:dddInputType="numberDecimal"
                        order:ddd_is_bottom_line="true"
                        order:ddd_label="@string/site_g" />

                    <com.barisetech.www.workmanage.widget.FormView
                        android:id="@+id/site_h"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        order:ddd_content_enable="true"
                        order:ddd_content_hint="@string/site_h_please"
                        order:dddInputType="number"
                        order:ddd_is_bottom_line="true"
                        order:ddd_label="@string/site_h" />

                    <com.barisetech.www.workmanage.widget.FormView
                        android:id="@+id/site_i"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        order:ddd_content_enable="true"
                        order:ddd_content_hint="@string/site_i_please"
                        order:dddInputType="numberDecimal"
                        order:ddd_is_bottom_line="true"
                        order:ddd_label="@string/site_i" />

                    <com.barisetech.www.workmanage.widget.FormView
                        android:id="@+id/site_j"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        order:ddd_content_enable="true"
                        order:ddd_content_hint="@string/site_j_please"
                        order:dddInputType="number"
                        order:ddd_is_bottom_line="true"
                        order:ddd_label="@string/site_j" />
                </LinearLayout>

                <Button
                    android:id="@+id/sumbit_modify"
                    android:layout_width="@dimen/dp_315"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@drawable/shane_button_corners"
                    android:text="@string/submit_modify"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"/>

                <Button
                    android:id="@+id/delete_site"
                    android:layout_width="@dimen/dp_315"
                    android:layout_height="@dimen/dp_50"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/shane_button_corners_red"
                    android:text="@string/delete_site"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginBottom="@dimen/dp_25"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</layout>